--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,15 @@
   display: block;
   width:384px;
   margin: 50px auto;
+  color: aqua;
 }
 
 p {
   display: block;
   width: 400px;
   margin: 50px auto;
+  color: aqua;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
+
+
