--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,11 @@ p {
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
+
+#ups {
+  color: green;
+}
+
+#dem {
+  color: red;
+}
