--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,15 @@
   margin: 50px auto;
 }
 
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f9;
+  color: #333;
+}
+
 p {
   display: block;
   width: 400px;
