--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,22 @@
 * {
-  margin:0px;
-  padding:0px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; /* Ensures padding and border do not increase element size */
 }
 
 #octocat {
   display: block;
-  width:384px;
+  width: 384px;
   margin: 50px auto;
+  max-width: 100%; /* Makes the image responsive */
 }
 
 p {
   display: block;
   width: 400px;
   margin: 50px auto;
-  font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+  font-size: 24px; /* Adjusted for better readability */
+  font-family: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
+  line-height: 1.5; /* Improved readability */
+  text-align: center; /* Centers text for better presentation */
 }
