changed text and colors

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 * {
   margin:0px;
+  color: brown;
+  background-color: bisque;
   padding:0px;
 }
 
 #octocat {
   display: block;
+  color: aquamarine;
   width:384px;
   margin: 50px auto;
 }
@@ -13,5 +16,5 @@ p {
   display: block;
   width: 400px;
   margin: 50px auto;
-  font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+  font: 30px Monaco,"Ariel","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
