--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ p {
   width: 400px;
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
-     color: #333;
+     Modified the image and paragraph text
      line-height: 1.5;
      text-align: center;
    }
