--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,20 @@
   padding:0px;
 }
 
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+}
+
+header, footer {
+  padding: 1em 0;
+}
+
+main {
+  padding: 2em;
+}
+
+
 #octocat {
   display: block;
   width:384px;
@@ -14,4 +28,6 @@ p {
   width: 400px;
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+  font-size: 1.2em;
+  color: #555;
 }
