--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,19 @@ p {
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
+
+.title{
+  text-align: center;
+  display: block;
+  width: 400px;
+  margin: 50px auto;
+  font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+}
+.github{
+  font-weight: bold;
+}
+
+.video{
+  display: block;
+  margin: 50px auto;
+}
