--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 *{
   margin:0;
   padding:0;
@@ -1407,7 +1409,7 @@ background:linear-gradient(rgba(197, 255, 255, 1),rgba(108, 191, 191, 1),rgba(64
   }
  
 }
-form{
+.rform{
   width:90%;
   height:750px;
   overflow-y: auto;
@@ -1608,6 +1610,128 @@ box-shadow:-5px 9px 4px 0px rgba(15, 73, 78, 0.25);
     }
 }
 }
+
+/* //Login form */
+
+.login{
+  height:100vh;
+  width:100vw;
+  background-color:rgba(207, 255, 249, 1);
+  display:flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.logform{
+  width:30%;
+  height:60%;
+  display:flex;
+  flex-direction: column;
+  /* align-items: center; */
+  
+
+}
+.logimg{
+  width:35%;
+  height:60%;
+  background-image:url(../public/Vector.png);
+  background-size:100% 100%;
+}
+.logimg img{
+  width:100%;
+  height:100%;
+}
+.loginform{
+  height:80%;
+  width:100%;
+  display:flex;
+
+  flex-direction: column;
+  align-items:start;
+  justify-content: space-between;
+  margin-top: 10%;
+}
+.remember{
+  display:flex;
+
+}
+.logform h3{
+  font-family: "Overpass", sans-serif;
+font-weight: 800;
+font-size: 36px;
+
+}
+.logform span{
+  font-family: "Nunito", sans-serif;  
+font-weight: 400;
+font-size: 18px;
+}
+.valid{
+  font-family: "Nunito", sans-serif;  
+font-weight: 400;
+color:blue;
+
+}
+
+.loginform label{
+font-family: "Nunito", sans-serif;  
+font-weight: 600;
+font-size: 20px;
+color:rgba(68, 75, 89, 1);
+background-color:rgba(207, 255, 249, 1);
+padding:0;
+
+}
+.loginform input{
+  background-color: rgba(255, 255, 255, 1);
+  border:2px solid rgba(11, 182, 220, 1);
+  border-radius: 80px;
+  width:100%;
+
+}
+.radio{
+  width:10%;
+  min-height:0px;
+  height:60%;
+  
+}
+ .rem{
+  font-family: "Nunito", sans-serif;  
+font-weight: 400;
+font-size: 14px;
+color:rgba(68, 75, 89, 1);
+}
+.signin{
+  width:100%;
+  height:18%;
+  background-color: rgba(11, 182, 220, 1);
+  color:rgba(255, 255, 255, 1);
+  font-family: "Nunito", sans-serif;
+font-weight: 800;
+font-size: 28px;
+border-radius:80px;
+
+}
+.full{
+  background-color: white;
+  color:black;
+  font-family: "Nunito", sans-serif;
+font-weight: 400;
+font-size: 40px;
+border-radius:27px;
+padding-left:10px;
+margin-top:10%;
+text-align:center;
+
+}
+.uhv{
+  color:rgba(22, 182, 240, 1);
+  font-size: 40px;
+  font-weight: 400;
+  padding-left:10px;
+
+}
+
 
 
 
