--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,8 @@ p {
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
+
+
+.hellyeah{
+  font-size: 50em;
+}
