--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,7 @@
-* {
-  margin:0px;
-  padding:0px;
-}
+   <div id="octocat">
+     <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
+   </div>
 
-#octocat {
-  display: block;
-  width:384px;
-  margin: 50px auto;
-}
-
-p {
-  display: block;
-  width: 400px;
-  margin: 50px auto;
-  font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
-}
+   <p>
+     Ready to team up? Let's collaborate, @octocat!
+   </p>
