--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,31 @@
-   <div id="octocat">
-     <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
-   </div>
+ * {
+  margin:0px;
+  padding:0px;
+}
 
-   <p>
-     Ready to team up? Let's collaborate, @octocat!
-   </p>
+#octocat {
+  display: block;
+  width:384px;
+  margin: 50px auto;
+}
+
+p {
+  display: block;
+  width: 400px;
+  margin: 50px auto;
+  font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+     color: #333;
+     line-height: 1.5;
+     text-align: center;
+   }
+
+   body {
+     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     background-color: #f8f9fa;
+   }
+
+   #octocat img {
+     display: block;
+     width: 100%;
+     height: auto;
+   }
