--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,18 @@
   display: block;
   width:384px;
   margin: 50px auto;
+  color: #333;
+  line-height: 1.5;
+  text-align: center;
 }
 
-p {
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f8f9fa;
+}
+
+#octocat img {
   display: block;
-  width: 400px;
-  margin: 50px auto;
-  font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+  width: 100%;
+  height: auto;
 }
